--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,13 +35,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/playBufferButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/play_buffer"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@id/captureButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
         android:id="@+id/resultText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/listening"
-        app:layout_constraintTop_toBottomOf="@id/captureButton"
+        app:layout_constraintTop_toBottomOf="@id/playBufferButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
