--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,12 +36,22 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/playBufferButton"
+        android:id="@+id/playRawButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/play_buffer"
-        android:layout_marginTop="16dp"
+        android:text="@string/play_raw_buffer"
+        android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@id/captureButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/playProcessedButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/play_processed_buffer"
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@id/playRawButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -51,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/listening"
-        app:layout_constraintTop_toBottomOf="@id/playBufferButton"
+        app:layout_constraintTop_toBottomOf="@id/playProcessedButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
